    elements.
 * WML engine:
   * [store_side] now stores the scroll_to_leader attribute from sides.
   * Added new CampaignWML attributes "type", "min_players" and "max_players".
   * Added new ScenariowML attributes "new_game_title",
     "remove_from_carryover_on_leaders_loss" and "force_use_map_settings".
   * Allow numerical values for SideWML "controller" attribute.
 * User Interface:
   * MP "Create" screen has been revamped by moving scenario configuration
     widgets to a new MP "Configure" screen, introducing a description box,
     adding a combo selection for different types of game, and adjusting it to
     work well with MP campaigns.
 * Miscellaneous and bug fixes:
   * Added -256 and -512 color shifts to FADE_TO_BLACK and FADE_TO_BLACK_HOLD
     macros to account for ToD color shifts greater than -31, guaranteeing
     complete darkness.
   * Unit WML frames with image modifications are now shown correctly for
     hits/death.
   * Fixed compare_images.py (called by wesnoth-optipng) and pofix.py to
     function with python-3.2.
   * Refactored and split the MP "Create" and "Connect" screens' code into
     gui and engine parts.
   * Lock faction, leader, and gender selections in MP "Connect" if "Use map
     settings" is on and default values were provided.

Version 1.11.6:
 * Add-ons client:
   * The Description popup displays the selected add-on's dependencies now,
     using color-keyed statuses.
   * Circular dependencies are no longer treated as erroneous in terminal
     output.
 * AI:
   * Micro AIs:
     * New Hang Out Micro AI
     * Any number of Micro AIs can now be combined on the same side
     * Goto MAI: new parameters avoid_enemies=, ignore_units= and ignore_enemy_at_goal=
     * Goto MAI: [filter] is now an optional parameter
     * ca_id is now an optional parameter for all MAIs
     * ca_score is now an optional parameter for almost all MAIs
     * Bug fixes for Patrol, Messenger, Multipack Wolves and all Guardian MAIs