@@ -27,11 +27,12 @@ Version 1.11.6+dev:
    * Added new ScenariowML attributes "new_game_title",
      "remove_from_carryover_on_leaders_loss" and "force_use_map_settings".
    * Allow numerical values for SideWML "controller" attribute.
- * User Interface:
+ * User interface:
    * MP "Create" screen has been revamped by moving scenario configuration
      widgets to a new MP "Configure" screen, introducing a description box,
      adding a combo selection for different types of game, and adjusting it to
      work well with MP campaigns.
+   * Possible fix for clipboard integration issues with GUI2 widgets on X11.
  * Miscellaneous and bug fixes:
    * Added -256 and -512 color shifts to FADE_TO_BLACK and FADE_TO_BLACK_HOLD
      macros to account for ToD color shifts greater than -31, guaranteeing
